--- a/scala/src/main/resources/reference.conf
+++ b/scala/src/main/resources/reference.conf
@@ -18,24 +18,18 @@ carbon-influx {
   # Too high of an interval and it causes higher memory usage plus longer metrics latency.
   # Too low of an interval and it causes less efficient sends to Influx.
   influx-send-interval = 30s
-}
 
-akka.actor {
   # Configure a bounded mailbox to ensure we don't run out of memory
   # in case something wrong happens with push to InfluxDB.
   # Having a feedback-based throttling/backpressure mechanism is better, but
   # this is a poor-man's version and should work for now.
-  default-mailbox {
-
+  bounded-mailbox {
+    mailbox-type = "akka.dispatch.BoundedMailbox"
+    mailbox-capacity = 5000
+    mailbox-push-timeout-time = 10s
   }
 }
 
-bounded-mailbox {
-  mailbox-type = "akka.dispatch.BoundedMailbox"
-  mailbox-capacity = 5000
-  mailbox-push-timeout-time = 10s
-}
-
 akka.actor.mailbox.requirements {
-  "akka.dispatch.BoundedMessageQueueSemantics" = bounded-mailbox
+  "akka.dispatch.BoundedMessageQueueSemantics" = carbon-influx.bounded-mailbox
 }
