Lower the send interval

--- a/scala/src/main/resources/reference.conf
+++ b/scala/src/main/resources/reference.conf
@@ -14,10 +14,10 @@ carbon-influx {
   carbon-port = 2003
 
   # This determines the interval at which batched metrics are flushed to InfluxDB.
-  # Set it to 1-2x the period that metrics are flushed from your app.
+  # It does NOT affect the timestamps of the metrics themselves.
   # Too high of an interval and it causes higher memory usage plus longer metrics latency.
   # Too low of an interval and it causes less efficient sends to Influx.
-  influx-send-interval = 30s
+  influx-send-interval = 5s
 
   # Configure a bounded mailbox to ensure we don't run out of memory
   # in case something wrong happens with push to InfluxDB.
