Make the connect and read timeouts configurable

--- a/scala/src/main/resources/reference.conf
+++ b/scala/src/main/resources/reference.conf
@@ -18,6 +18,12 @@ carbon-influx {
   # Too high of an interval and it causes higher memory usage plus longer metrics latency.
   influx-send-interval = 1s
 
+  # HTTP client connect timeout
+  connect-timeout = 500ms
+
+  # HTTP client read timeout
+  read-timeout = 3000ms
+
   # Configure a bounded mailbox to ensure we don't run out of memory
   # in case something wrong happens with push to InfluxDB.
   # Having a feedback-based throttling/backpressure mechanism is better, but
