Add built-in tee capability to send lines to old Graphite server
Much more resilient than carbon-tee.sh, it survives the Graphite server
restarting.

--- a/scala/src/main/resources/reference.conf
+++ b/scala/src/main/resources/reference.conf
@@ -13,6 +13,12 @@ carbon-influx {
   # Port to listen to for Carbon input
   carbon-port = 2003
 
+  # Enable teeing the Carbon input to another Carbon server, probably the original
+  # Graphite carbon daemon.  Does not affect forwarding of metrics to Influx.
+  carbon-tee = false
+  tee-carbon-host = localhost
+  tee-carbon-port = 2103
+
   # This determines the interval at which batched metrics are flushed to InfluxDB.
   # It does NOT affect the timestamps of the metrics themselves.
   # Too high of an interval and it causes higher memory usage plus longer metrics latency.
@@ -23,6 +29,8 @@ carbon-influx {
 
   # HTTP client read timeout
   read-timeout = 3000ms
+
+
 
   # Configure a bounded mailbox to ensure we don't run out of memory
   # in case something wrong happens with push to InfluxDB.
